Big update part 2:  - Shiny new Angle class to solve all your angular problems  - Servo speed can now be changed  - All DriveComponents now have an exposed motor group for easy access to motor properties  - Differential swerve drive support out-of-the-box!  - DashboardUtil has been removed and merged into SuperTelemetry  - SuperTelemetry now graphs items on their own line in FTC Dashboard  - Motor now has 2 new properties: rotation and maxDistanceVelocity  - RobotOpMode now has preInit and preStart instead of just init so you can actually schedule commands to run in the run loop  - Did someone say DRAGGABLE TANGENTS AND HEADING? Cause the GUI has it now  - CommandScheduler.reset() should now be thread-safe  - Minor logo changes