@@ -4,16 +4,23 @@ import com.amarcolini.joos.gui.rendering.Backgrounds
 import com.amarcolini.joos.gui.style.Dark
 import com.amarcolini.joos.gui.style.Light
 import com.amarcolini.joos.gui.trajectory.TrajectoryEditor
+import com.amarcolini.joos.util.NanoClock
+import com.sun.javafx.application.LauncherImpl
+import javafx.application.Application
+import javafx.application.Preloader
+import javafx.scene.Scene
 import javafx.scene.control.MenuItem
 import javafx.scene.control.TabPane
 import javafx.scene.control.TextInputDialog
 import javafx.scene.image.Image
-import javafx.scene.layout.Priority
+import javafx.scene.image.ImageView
+import javafx.scene.layout.*
 import javafx.scene.shape.Path
+import javafx.scene.text.Text
 import javafx.stage.FileChooser
-import javafx.stage.Modality
 import javafx.stage.Screen
 import javafx.stage.Stage
+import javafx.stage.StageStyle
 import tornadofx.*
 import java.io.File
 import java.nio.file.Paths
@@ -37,6 +44,8 @@ internal class MainApp : App(MainView::class, Dark::class) {
             }
         }
         importStylesheet(Global.theme.value::class)
+//        while (clock.seconds() - start < 3) {}
+//        splashStage.hide()
         super.start(stage)
     }
 }
@@ -143,6 +152,35 @@ internal class MainView : View() {
     }
 }
 
+internal lateinit var splashStage: Stage
+private var start: Double = 0.0
+private val clock = NanoClock.system()
+internal class SplashScreen : Preloader() {
+    
+    override fun start(primaryStage: Stage?) {
+        splashStage = primaryStage ?: return
+        val root = HBox().apply {
+            val image = imageview("logo.png", false) {
+                isPreserveRatio = true
+            }
+            style {
+                paddingAll = 20.0
+            }
+            maxWidth = image.image.width
+            maxHeight = image.image.height
+        }
+        splashStage.scene = Scene(root, Global.theme.value.background)
+        splashStage.initStyle(StageStyle.UNDECORATED)
+        splashStage.show()
+    }
+}
+
 fun main(args: Array<String>) {
     launch<MainApp>(args + "--add-modules javafx.controls,javafx.fxml")
+//    start = clock.seconds()
+//    LauncherImpl.launchApplication(
+//        MainApp::class.java,
+//        SplashScreen::class.java,
+//        args + "--add-modules javafx.controls,javafx.fxml"
+//    )
 }
